objects/DMAPP__DM_Decision_Criterion_Score__c.object
<CustomObject>
    <description>NO CONFIGURATION SUPPORT 

This is a new object which will hold the decision criterion score. It supersedes the Decision Criteria Rank object. Its major difference is that it has a master detail relationship with the new Political Map Contact Object as opposed to the old Opportunity Contact Extra object.</description>
    <fields>
        <fullName>DMAPP__Computed_Rank__c</fullName>
        <formula>CASE( DMAPP__Importance__c, 
&quot;Unknown&quot;, 1,
&quot;Low&quot;,2,
&quot;Medium&quot;,4,
&quot;High&quot;,8,
&quot;Critical&quot;,16,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Computed Rank</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__DM_Decision_Criterion__c</fullName>
        <label>Decision Criterion</label>
        <referenceTo>DMAPP__DM_Decision_Criterion__c</referenceTo>
        <relationshipLabel>Decision Criteria Score</relationshipLabel>
        <relationshipName>Decision_Criteria_Score</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Importance__c</fullName>
        <description>The importance field indicates the importance of the that master political map contact object associates to the master decision criterion  object.</description>
        <label>Importance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMAPP__Political_Map_Contact__c</fullName>
        <label>Political Map Contact</label>
        <referenceTo>DMAPP__DM_Political_Map_Contact__c</referenceTo>
        <relationshipLabel>Decision Criteria Score</relationshipLabel>
        <relationshipName>DM_Decision_Criterion_Scores</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Decision Criterion Score</label>
    <nameField>
        <label>Decision Criterion Score Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Decision Criteria Score</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>